<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <version>1.0</version>
    <modules>
        <module>nfsdb-core</module>
        <module>nfsdb-guice</module>
        <module>nfsdb-test-model</module>
    </modules>

    <groupId>com.mawen</groupId>
    <artifactId>learn-nfsdb</artifactId>
    <packaging>pom</packaging>
    <name>Learn NFSdb</name>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>